Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23357

Server crashes in Sql_cmd_alter_table_exchange_partition::exchange_partition

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.5(EOL)
    • 10.5.5
    • Partitioning
    • None

    Description

      --source include/have_partition.inc
       
      CREATE TABLE t1 (i INT);
      INSERT INTO t1 VALUES (1),(2),(3); #not necessary 
      CREATE VIEW v1 as SELECT * FROM `t1`;
       
      CREATE TABLE t2 (i INT);
      INSERT INTO t2 VALUES (1),(2),(3); #not necessary 
       
      ALTER TABLE v1 EXCHANGE PARTITION p2 WITH TABLE t2 ;
      

      debug + non-debug build:

      10.5 c69520c9dfa6e4a26258842a1d35

      Version: '10.5.5-MariaDB-debug-log'
      200731 14:29:39 [ERROR] mysqld got signal 11 ;
       
      mysys/stacktrace.c:306(my_print_stacktrace)[0x5601cd000bd6]
      sql/sql_partition_admin.cc:566(Sql_cmd_alter_table_exchange_partition::exchange_partition(THD*, TABLE_LIST*, Alter_info*))[0x5601ccc59bff]
      sql/sql_partition_admin.cc:109(Sql_cmd_alter_table_exchange_partition::execute(THD*))[0x5601ccc56b0d]
      sql/sql_parse.cc:5951(mysql_execute_command(THD*))[0x5601cc84e64d]
      sql/sql_parse.cc:7993(mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool))[0x5601cc85bc7c]
      sql/sql_parse.cc:1869(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool))[0x5601cc832b95]
      sql/sql_parse.cc:1347(do_command(THD*))[0x5601cc82f4ad]
      sql/sql_connect.cc:1410(do_handle_one_connection(CONNECT*, bool))[0x5601ccc536c6]
      sql/sql_connect.cc:1314(handle_one_connection)[0x5601ccc53023]
      perfschema/pfs.cc:2203(pfs_spawn_thread)[0x5601cd908886]
      nptl/pthread_create.c:487(start_thread)[0x7ff08edaafa3]
      x86_64/clone.S:97(clone)[0x7ff08e3b14cf]
       
      Query (0x62b0000382a8): ALTER TABLE v1 EXCHANGE PARTITION p2 WITH TABLE t2
      
      

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25h
                  0.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.