MDEV-23357 Server crashes in Sql_cmd_alter_table_exchange_partition::exchange_partition